--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "typescript": "^3.5.0"
+    "typescript": "^3.4.*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
