--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "typescript": "^3.4.*"
+    "typescript": "^3.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.8.0",
-    "react-test-renderer": "^16.8.6"
+    "babel-preset-es2015": "^6.24.1",
+    "react-test-renderer": "^16.8.6",
+    "webpack-cli": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --mode production",
     "test": "jest",
     "eject": "react-scripts eject"
   },
